# 2024-float-ESP32

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
application/Adc/: Adc.cpp  Adc.h  CMakeLists.txt  Kconfig.projbuild
application/Gpio/: Gpio.cpp  Gpio.h
application/Hbridge/: CMakeLists.txt  Hbridge.cpp  Hbridge.h
application/I2c/: CMakeLists.txt  I2c.cpp  I2c.h  Kconfig.projbuild
application/MS5837/: CMakeLists.txt  MS5837.cpp  MS5837.h
application/Tcp/: CMakeLists.txt  Kconfig.projbuild  TcpClient.cpp  TcpClient.h
application/Wifi/: Kconfig.projbuild  Wifi.cpp  Wifi.h
core/: CMakeLists.txt  Kconfig.projbuild
core/Inc/: Selkie.h  main.h  packet.h
core/Src/: Selkie.cpp  main.cpp
